enhance categories routes
