# models/categoryModel.js
@@ -1,6 +1,20 @@
-const mongoose = require('mongoose')
+const mongoose = require('mongoose');
 
+const SubCategorySchema = new mongoose.Schema({
+    name: {
+        type: String,
+        required: true,
+        unique: true
+    },
+    description: {
+        type: String,
+        required: true
+    }
+}, {
+    timestamps: true
+});
 
+// Main Category Schema
 const CategorySchema = new mongoose.Schema({
     name: {
         type: String,
@@ -14,17 +28,23 @@ const CategorySchema = new mongoose.Schema({
     image: {
         public_id: {
             type: String,
-            required:[true,'please provide image id']
+            required: [true, 'please provide image id']
         },
         url: {
             type: String,
-            required:[true,'please provide image url']
+            required: [true, 'please provide image url']
         }
     },
-  
+    subcategories: [SubCategorySchema]  
+}, {
+    timestamps: true
 });
 
-CategorySchema.index({ name: 'text', description: 'text' })
+CategorySchema.index({
+    name: 'text',
+    description: 'text',
+    'subcategories.name': 'text',
+    'subcategories.description': 'text'
+});
 
-
-module.exports = mongoose.model('Category', CategorySchema)
+module.exports = mongoose.model('Category', CategorySchema);
